# Careerhack-2025-RealTime-Translate-System

./: .dockerignore  .gitignore  Dockerfile  GlossaryMatch.py  Makefile  RAG.py  README.md  embedding.py  enterprise_term_detector.py  environment.yaml  global.d.ts  google_cloud_storage.py  jsconfig.json  k8s.yaml  namespace.yaml  pyproject.toml  record_scren.html  record_with_noice_reduce.html  requirements.txt  sst_batch.py  sst_gemini.py  sst_normal.py  sst_streaming.py  test.html  test_for_noise_reduce.py  translate.py
dataset/: dataset.ipynb  en-US.csv  transcripts.csv
dataset/meeting_transcripts/: meeting.txt  meeting2.txt  meeting3.txt  meeting4.txt
record_extension/: manifest.json  popup.css  popup.html  popup.js
src/realtime_translate_system/: app.py  config.py  container.py  detect.py  speech_recongizer.py  term_matcher.py  translate.py
src/realtime_translate_system/blueprints/: __init__.py  static_file.py
src/realtime_translate_system/extensions/: __init__.py
src/realtime_translate_system/glossaries/: cmn-Hant-TW.csv  de-DE.csv  ja-JP.csv
src/realtime_translate_system/models/: doc.py
src/realtime_translate_system/services/: TODO  __init__.py  ai_service.py  audio_service.py  database_service.py  meeting_service.py  speech_recongizer.py  term_matcher.py  transcript_service.py  translation_service.py
src/realtime_translate_system/sockets/: __init__.py  audio_socket.py  chat_socket.py
ui/: ProseMirror.html  app.py  dictionary.json  history.txt  index.html  requirement.txt  search_meeting.html  speech_to_text.html  speech_to_text.py  style.css
(+46 files in other folders)
