[project]
authors = [{name = "jimmyhealer", email = "yahing6066@gmail.com"}]
description = "Add a short description here"
name = "realtime-translate-system"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["ipykernel>=6.29.5,<7", "pyannote-audio>=3.3.2,<4", "pydub>=0.25.1,<0.26", "audioop-lts>=0.2.1,<0.3", "python-dotenv>=1.0.1,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
realtime_translate_system = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.3,<3"
openpyxl = ">=3.1.5,<4"
google-cloud-sdk = { version = ">=509.0.0,<510", channel = "conda-forge" }
